@@ -1,5 +1,9 @@
 2010-04-16  Karel Klíč  <kklic@redhat.com>
 
+	* src/app/optionsdialog.cpp (OptionsDialog): Rewrite the language
+	list creation code to support non-ASCII letters and variable number
+	of first letters.
+
 	* .dir-locals.el: New file; contains global Emacs settings
 	for Wikt.
 
